build section main

--- a/index.html
+++ b/index.html
@@ -28,9 +28,31 @@
         </ul>
     </nav>
 
-    <main></main>
+    <main>
+        <h2 class="main-heading">O nas</h2>
+        <section class="main-section top">
+            <p class="main-text">Przepisy, dzięki którym zjesz smacznie i zdrowo!</p>
+            <div class="main-gb"></div>
+        </section>
+        <section class="main-section middle">
+            <p class="main-text">Przepisy, które są szybkie w przygotowaniu!</p>
+            <div class="main-gb"></div>
+        </section>
+        <section class="main-section bottom">
+            <p class="main-text">Przepisy, do których składniki masz w swojej kuchni!</p>
+            <div class="main-gb"></div>
+        </section>
+        
 
-    <footer></footer>
+    <footer>
+        <div class="footer-icon">
+            <i class="fas fa-envelope"></i>
+            <i class="fas fa-mobile-alt"></i>
+        </div>
+        <p>Healthy Sweets. Wszystkie prawa zastrzeżone.</p>
+    </footer>
 
 </body>
 </html>
+
+</main>
