add transition between sections on the same page

--- a/recipe.html
+++ b/recipe.html
@@ -17,17 +17,16 @@
         <h2 class="main-heading">Przepisy</h2>
 
         <ol class="recipes-list">
-            <li>Owsianka czekoladowa</li>
-            <li>Podwójnie truskawkowy ryż na mleczku kokosowym</li>
-            <li>Puszysty fit omlet biszkoptowy</li>
-            <li>Domowa granola bez oleju, cukru i miodu</li>
+            <li><a href="#oatmeal">Owsianka czekoladowa</a></li>
+            <li><a href="#omelette">Puszysty fit omlet biszkoptowy</a></li>
+            <li><a href="#rice">Podwójnie truskawkowy ryż na mleczku kokosowym</a></li>
         </ol>
         <br>
         <hr>
         <br>
 
         <section class="recipes-text">
-            <h3>Owsianka czekoladowa</h3>
+            <h3><a name="oatmeal">Owsianka czekoladowa</a></h3>
             <img class="oatmeal" src="/image/owsianka-czekoladowa.jpg" alt="owsianka czekoladowa">
             <br>
             <h4>Składniki</h4>
@@ -51,7 +50,7 @@
 
 
         <section class="recipes-text">
-            <h3>Puszysty fit omlet biszkoptowy</h3>
+            <h3><a name="omelette">Puszysty fit omlet biszkoptowy</a></h3>
             <img class="omelette" src="/image/omlet-biszkoptowy.jpg" alt="omlet biszkoptowy z malinami">
             <br>
             <h4>Składniki</h4>
@@ -73,8 +72,8 @@
         </section>
 
         <section class="recipes-text">
-            <h3>Podwójnie truskawkowy ryż na mleczku kokosowym</h3>
-            <img class="oatmeal" src="/image/truskawkowy-ryz.jpg" alt="ryż z truskawkami">
+            <h3><a name="rice">Podwójnie truskawkowy ryż na mleczku kokosowym</a></h3>
+            <img class="rice" src="/image/truskawkowy-ryz.jpg" alt="ryż z truskawkami">
             <br>
             <h4>Składniki</h4>
             <ul>
