fix a section 'recipe'

--- a/recipe.html
+++ b/recipe.html
@@ -15,15 +15,35 @@
     
     <main>
         <h2 class="main-heading">Przepisy</h2>
+        <div class="recipes-list">
+            <a href="#rice"><img src="/image/truskawkowy-ryz.jpg" alt="ryż z truskawkami"></a>
+            <a href="#oatmeal"><img src="/image/owsianka-czekoladowa.jpg" alt="owsianka czekoladowa"></a>
+            <a href="#omelette"><img src="/image/omlet-biszkoptowy.jpg" alt="biszkoptowy omlet z malinami"></a>
+        </div>
 
-        <ol class="recipes-list">
-            <li><a href="#oatmeal">Owsianka czekoladowa</a></li>
-            <li><a href="#omelette">Puszysty fit omlet biszkoptowy</a></li>
-            <li><a href="#rice">Podwójnie truskawkowy ryż na mleczku kokosowym</a></li>
-        </ol>
-        <br>
         <hr>
-        <br>
+
+        <section class="recipes-text">
+            <h3><a name="rice">Podwójnie truskawkowy ryż na mleczku kokosowym</a></h3>
+            <img class="rice" src="/image/truskawkowy-ryz.jpg" alt="ryż z truskawkami">
+            <br>
+            <h4>Składniki</h4>
+            <ul>
+                <li>600 g truskawek</li>
+                <li>400 g ryżu arborio (do risotto)</li>
+                <li>4 łyżki ksylitolu lub erytrolu (2 do ryżu i 2 do truskawek)</li>
+                <li>250 ml mleczka kokosowego</li>
+                <li>200 g jogurtu naturalnego</li>
+            </ul>
+            <br>
+            <h4>Przygotowanie</h4>
+            <ol>
+                <li>Ryż odmierzamy, wrzucamy do wrzącej wody (nie solimy) i gotujemy zgodnie z instrukcją na opakowaniu (arborio najczęściej gotujemy 14 minut).</li>
+                <li>W międzyczasie obieramy truskawki z szypułek i kroimy na mniejsze kawałki. Połowę truskawek odstawiamy na bok, a drugą połowę zagniatamy widelcem, aż puszczą sok. Do rozgniecionych truskawek dodajemy 2 łyżki ksylitolu oraz jogurt naturalny i dokładnie mieszamy, aż całość się połączy. Po chwili warto przemieszać jeszcze raz, aby ksylitol się całkowicie rozpuścił. Również odstawiamy na bok.</li>
+                <li>Ryż odcedzamy na sitku i przekładamy z powrotem do garnka. Dodajemy do niego mleczko kokosowe oraz pozostałe 2 łyżki ksylitolu. Bardzo dokładnie mieszamy, aż ksylitol się rozpuści. Odstawiamy na 2 minutki, żeby ryż wchłonął całe mleczko.</li>
+                <li>Gotowy ryż przekładamy na talerze, polewamy truskawkami z jogurtem a na koniec posypujemy drugą połową pokrojonych truskawek. Możemy udekorować listkiem mięty oraz wiórkami lub chipsami kokosowymi dla dodatkowego efektu i smaku. Pyszny zarówno na ciepło, jak i na zimno.</li>
+            </ol>
+        </section>
 
         <section class="recipes-text">
             <h3><a name="oatmeal">Owsianka czekoladowa</a></h3>
@@ -71,29 +91,6 @@
             </ol>
         </section>
 
-        <section class="recipes-text">
-            <h3><a name="rice">Podwójnie truskawkowy ryż na mleczku kokosowym</a></h3>
-            <img class="rice" src="/image/truskawkowy-ryz.jpg" alt="ryż z truskawkami">
-            <br>
-            <h4>Składniki</h4>
-            <ul>
-                <li>600 g truskawek</li>
-                <li>400 g ryżu arborio (do risotto)</li>
-                <li>4 łyżki ksylitolu lub erytrolu (2 do ryżu i 2 do truskawek)</li>
-                <li>250 ml mleczka kokosowego</li>
-                <li>200 g jogurtu naturalnego</li>
-            </ul>
-            <br>
-            <h4>Przygotowanie</h4>
-            <ol>
-                <li>Ryż odmierzamy, wrzucamy do wrzącej wody (nie solimy) i gotujemy zgodnie z instrukcją na opakowaniu (arborio najczęściej gotujemy 14 minut).</li>
-                <li>W międzyczasie obieramy truskawki z szypułek i kroimy na mniejsze kawałki. Połowę truskawek odstawiamy na bok, a drugą połowę zagniatamy widelcem, aż puszczą sok. Do rozgniecionych truskawek dodajemy 2 łyżki ksylitolu oraz jogurt naturalny i dokładnie mieszamy, aż całość się połączy. Po chwili warto przemieszać jeszcze raz, aby ksylitol się całkowicie rozpuścił. Również odstawiamy na bok.</li>
-                <li>Ryż odcedzamy na sitku i przekładamy z powrotem do garnka. Dodajemy do niego mleczko kokosowe oraz pozostałe 2 łyżki ksylitolu. Bardzo dokładnie mieszamy, aż ksylitol się rozpuści. Odstawiamy na 2 minutki, żeby ryż wchłonął całe mleczko.</li>
-                <li>Gotowy ryż przekładamy na talerze, polewamy truskawkami z jogurtem a na koniec posypujemy drugą połową pokrojonych truskawek. Możemy udekorować listkiem mięty oraz wiórkami lub chipsami kokosowymi dla dodatkowego efektu i smaku. Pyszny zarówno na ciepło, jak i na zimno.</li>
-            </ol>
-        </section>
-
-        
     </main>
 
     <div w3-include-html="footer.html"></div>
