--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Recipes for cakes</title>
     <script src="https://kit.fontawesome.com/8282420fa2.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
     </main>
 
     <div w3-include-html="footer.html"></div>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
     <script>
         includeHTML();
     </script>
