--- a/recipe.html
+++ b/recipe.html
@@ -6,7 +6,7 @@
     <title>Recipes for cakes</title>
     <script src="https://kit.fontawesome.com/8282420fa2.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -16,16 +16,16 @@
     <main>
         <h2 class="main-heading">Przepisy</h2>
         <div class="recipes-list">
-            <a href="#rice"><img src="/image/truskawkowy-ryz.jpg" alt="ryż z truskawkami"></a>
-            <a href="#oatmeal"><img src="/image/owsianka-czekoladowa.jpg" alt="owsianka czekoladowa"></a>
-            <a href="#omelette"><img src="/image/omlet-biszkoptowy.jpg" alt="biszkoptowy omlet z malinami"></a>
+            <a href="#rice"><img src="image/truskawkowy-ryz.jpg" alt="ryż z truskawkami"></a>
+            <a href="#oatmeal"><img src="image/owsianka-czekoladowa.jpg" alt="owsianka czekoladowa"></a>
+            <a href="#omelette"><img src="image/omlet-biszkoptowy.jpg" alt="biszkoptowy omlet z malinami"></a>
         </div>
 
         <hr>
 
         <section class="recipes-text">
             <h3><a name="rice">Podwójnie truskawkowy ryż na mleczku kokosowym</a></h3>
-            <img class="rice" src="/image/truskawkowy-ryz.jpg" alt="ryż z truskawkami">
+            <img class="rice" src="image/truskawkowy-ryz.jpg" alt="ryż z truskawkami">
             <br>
             <h4>Składniki</h4>
             <ul>
