change file path

--- a/recipe.html
+++ b/recipe.html
@@ -16,16 +16,16 @@
     <main>
         <h2 class="main-heading">Przepisy</h2>
         <div class="recipes-list">
-            <a href="#rice"><img src="image/truskawkowy-ryz.jpg" alt="ryż z truskawkami"></a>
-            <a href="#oatmeal"><img src="image/owsianka-czekoladowa.jpg" alt="owsianka czekoladowa"></a>
-            <a href="#omelette"><img src="image/omlet-biszkoptowy.jpg" alt="biszkoptowy omlet z malinami"></a>
+            <a href="#rice"><img src="../image/truskawkowy-ryz.jpg" alt="ryż z truskawkami"></a>
+            <a href="#oatmeal"><img src="../image/owsianka-czekoladowa.jpg" alt="owsianka czekoladowa"></a>
+            <a href="#omelette"><img src="../image/omlet-biszkoptowy.jpg" alt="biszkoptowy omlet z malinami"></a>
         </div>
 
         <hr>
 
         <section class="recipes-text">
             <h3><a name="rice">Podwójnie truskawkowy ryż na mleczku kokosowym</a></h3>
-            <img class="rice" src="image/truskawkowy-ryz.jpg" alt="ryż z truskawkami">
+            <img class="rice" src="../image/truskawkowy-ryz.jpg" alt="ryż z truskawkami">
             <br>
             <h4>Składniki</h4>
             <ul>
@@ -47,7 +47,7 @@
 
         <section class="recipes-text">
             <h3><a name="oatmeal">Owsianka czekoladowa</a></h3>
-            <img class="oatmeal" src="/image/owsianka-czekoladowa.jpg" alt="owsianka czekoladowa">
+            <img class="oatmeal" src="../image/owsianka-czekoladowa.jpg" alt="owsianka czekoladowa">
             <br>
             <h4>Składniki</h4>
             <ul>
@@ -71,7 +71,7 @@
 
         <section class="recipes-text">
             <h3><a name="omelette">Puszysty fit omlet biszkoptowy</a></h3>
-            <img class="omelette" src="/image/omlet-biszkoptowy.jpg" alt="omlet biszkoptowy z malinami">
+            <img class="omelette" src="../image/omlet-biszkoptowy.jpg" alt="omlet biszkoptowy z malinami">
             <br>
             <h4>Składniki</h4>
             <ul>
@@ -94,7 +94,7 @@
     </main>
 
     <div w3-include-html="footer.html"></div>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
     <script>
         includeHTML();
     </script>
