--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,7 @@
 <footer>
-    <div class="footer-icon">
+    <!-- <div class="footer-icon">
         <i class="fas fa-envelope"></i>
         <i class="fas fa-mobile-alt"></i>
-    </div>
+    </div> -->
     <p>Healthy Sweets. Wszystkie prawa zastrzeżone.</p>
 </footer>
